Remove some yellow flags